--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -194,7 +194,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 
 /*互換字句樣式*/
 .swappable{
-	font: bold italic 16px 'cwTeXFangSong';
+	font: bold italic 20px 'cwTeXFangSong';
 }
 
 
@@ -2688,7 +2688,7 @@ Macro.add('ScrollTo', {
 &lt;&lt;set $clueimage2 to $choices2[$choicesCount2]&gt;&gt;
 
 /*預載圖片*/
-&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39; &#39;media/img/f1.png&#39; &#39;media/img/close.png&#39; &#39;media/img/datamenu.png&#39; &#39;media/img/forth.png&#39; &#39;media/img/back.png&#39; &#39;media/img/restart.png&#39; &#39;media/img/save.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
+&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39; &#39;media/img/f1.png&#39; &#39;media/img/f2.png&#39; &#39;media/img/f3.png&#39; &#39;media/img/f4.png&#39; &#39;media/img/f5.png&#39; &#39;media/img/f6.png&#39; &#39;media/img/f7.png&#39; &#39;media/img/f8.png&#39; &#39;media/img/close.png&#39; &#39;media/img/datamenu.png&#39; &#39;media/img/forth.png&#39; &#39;media/img/back.png&#39; &#39;media/img/restart.png&#39; &#39;media/img/save.png&#39; &#39;media/img/結局圖.png&#39; &#39;media/img/結局圖2.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
 &lt;&lt;link &quot;選擇章節&quot;&gt;&gt;&lt;&lt;run slideWin(&quot;章節選擇&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;&lt;link &quot;製作人員&quot;&gt;&gt;
 	&lt;&lt;script&gt;&gt;
@@ -4253,9 +4253,7 @@ https://reurl.cc/leNDV9</tw-passagedata><tw-passagedata pid="63" name="雜技團
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;此時，時光回到雜技團的現場，我看見黑影爬上欄杆，獅子紅眼，攻擊父母的景象，浮靈子帶我進入到父母的記憶片段中，難道，普濟殿有讓聖獸甦醒的幕後黑手。&lt;/div&gt;
 
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;突然聽⾒有個聲⾳⼤喊：「我的琵琶呢？我的琵琶去哪了？」
-
-我急忙轉頭尋找聲⾳的來源，卻看⾒⼤聖⼀副著急的樣⼦，揮⼿撒下⼀陣煙霧。整
-個普濟殿的空間，陷入⼀片混亂！&lt;/div&gt;
+我急忙轉頭尋找聲⾳的來源，卻看⾒⼤聖⼀副著急的樣⼦，揮⼿撒下⼀陣煙霧。整個普濟殿的空間，陷入⼀片混亂！&lt;/div&gt;
 
 [[進行解謎|遺忘之歌關卡01]]&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkreplace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="65" name="wrong" tags="" position="0,200" size="100,100">輸入錯誤，請重新輸入！</tw-passagedata><tw-passagedata pid="66" name="聖獸亂像關卡02" tags="center ch1 noheader" position="1325,200" size="100,100">@@color:#4E7D96;&lt;h2&gt;解讀玄天上帝所在，又離你最近的廟宇？&lt;/h2&gt;@@
@@ -4478,7 +4476,7 @@ media/img/烏龜.png
 
 &lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;記憶中樂曲的歌詞亂掉了，請幫助時月音想起正確的歌詞。點擊2個粉紅色的字詞即可互換位置，試著換成正確的歌詞吧！@@&lt;/div&gt;&lt;/div&gt;
 &lt;&lt;set $correct to [false, false, false, false]&gt;&gt;
-&lt;section class=&quot;paper1&quot;&gt;
+&lt;section class=&quot;paper&quot;&gt;
 為著&lt;&lt;swap&gt;&gt;熱情&lt;&lt;onswap&gt;&gt;
 	&lt;&lt;if swapCurrent() is &#39;愛情&#39;&gt;&gt;
 		&lt;&lt;set $correct[0] to true&gt;&gt;
@@ -4510,7 +4508,7 @@ media/img/烏龜.png
 
 &lt;/section&gt;
 
-[[重置歌詞|遺忘之歌關卡02解謎]]｜[[完成組合|遺忘之歌關卡02解謎結果]]
+[[完成組合|遺忘之歌關卡02解謎結果]]
 
 &lt;&lt;link &#39;給點提示吧...&#39;&gt;&gt;
     &lt;&lt;script&gt;&gt;
@@ -4590,6 +4588,7 @@ media/img/烏龜.png
 &lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請取出4號迷宮圖紙，從打星星處出發，設法取回三種不同的法寶。圖紙上的兩條虛線，是可以摺的哦。試著摺摺看再走吧。
 
 請注意，若走到其中⼀個⾨，則視為抵達終點。能順利取得三個寶物的路線，抵達的終點，便是聲⾳的⽅向。請將迷宮圖紙對照普濟殿平面圖（如下），找出抵達終點的實際位置並走⾄該處的門，輸入⾨上⽅所寫的兩個字。@@&lt;/div&gt;&lt;/div&gt;
+
 &lt;img src=&quot;media/img/普濟殿平面圖.jpg&quot; width=&quot;90%&quot;&gt;
 
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
