--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -3735,7 +3735,7 @@ html[data-debug-view] .debug.hidden .debug {
 牠正打算跳過火圈......&quot;
 &lt;&lt;replace &#39;#next&#39;&gt;&gt;[[繼續|雜技團裡大騷動03]]&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/ctp&gt;&gt;
-&lt;span id=&#39;next&#39;&gt;&lt;&lt;link &quot;繼續&quot;&gt;&gt;&lt;&lt;ctpAdvance &quot;testID&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;&lt;/div&gt;&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="雜技團裡大騷動04" tags="center ch0" position="900,550" size="100,100">@@.delayed;&lt;div class=&quot;lefttext&quot;&gt;歲月如梭，時月英和許福齡步入婚姻，時月英產下一子-許牧尋，正當月英和福齡以為從此過著幸福快樂的日子，但，發生了戰爭，美滿的家庭破碎......&lt;/div&gt;@@
+&lt;span id=&#39;next&#39;&gt;&lt;&lt;link &quot;繼續&quot;&gt;&gt;&lt;&lt;ctpAdvance &quot;testID&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;&lt;/div&gt;&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="雜技團裡大騷動04" tags="center ch0" position="900,550" size="100,100">&lt;div class=&quot;lefttext&quot;&gt;歲月如梭，時月英和許福齡步入婚姻，時月英產下一子-許牧尋，正當月英和福齡以為從此過著幸福快樂的日子，但，發生了戰爭，美滿的家庭破碎......&lt;/div&gt;
 
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;多年後，長大的許牧尋來到台南，帶著那顆神祕力量的寶玉，尋找失散多年的母親。&lt;/div&gt;
 
