--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -2706,7 +2706,7 @@ Macro.add('ScrollTo', {
 		Dialog.wiki(Story.get(&quot;人員名單&quot;).processText());
 		Dialog.open();
 	&lt;&lt;/script&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="425,0" size="100,100">&lt;img src=&quot;media/img/logo.png&quot; width=&quot;100%&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="*StorySubtitle" tags="noreturn" position="425,200" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="425,300" size="100,100">府城✖️聖獸✖️遺忘之歌</tw-passagedata><tw-passagedata pid="6" name="StoryCaption" tags="noreturn" position="325,100" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入非連結內容，會顯示於「StoryMenu」內容之下 --&gt;</tw-passagedata><tw-passagedata pid="7" name="開始頁面" tags="center ch0 ch0-1" position="900,0" size="100,100">&lt;div class=&quot;font-2&quot;&gt;&lt;h3&gt;&lt;em&gt;@@.delayed;為著愛情，不知雨水冷～@@
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="425,0" size="100,100">&lt;img src=&quot;media/img/menulogo.png&quot; width=&quot;100%&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="*StorySubtitle" tags="noreturn" position="425,200" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="425,300" size="100,100"></tw-passagedata><tw-passagedata pid="6" name="StoryCaption" tags="noreturn" position="325,100" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入非連結內容，會顯示於「StoryMenu」內容之下 --&gt;</tw-passagedata><tw-passagedata pid="7" name="開始頁面" tags="center ch0 ch0-1" position="900,0" size="100,100">&lt;div class=&quot;font-2&quot;&gt;&lt;h3&gt;&lt;em&gt;@@.delayed;為著愛情，不知雨水冷～@@
 @@.delayed;彼款感是，初戀的熱情～@@&lt;/em&gt;&lt;/h3&gt;&lt;/div&gt;
 
 @@.delayed;[[下一頁|雜技團裡大騷動01]]@@
@@ -4212,12 +4212,8 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/ctp&gt;&gt;
 &lt;span id=&#39;next&#39;&gt;&lt;&lt;link &quot;繼續&quot;&gt;&gt;&lt;&lt;ctpAdvance &quot;testID&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;&lt;/div&gt;
-&lt;span id=&#39;continue&#39;&gt;&lt;/span&gt;&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="58" name="unlock" tags="center ch0 noheader no-side-bar" position="700,0" size="100,100">/*&lt;img src=&quot;media/img/logo.png&quot; width=&quot;80%&quot;&gt;*/
-
-
-&lt;h1&gt;府城✖️聖獸✖️遺忘之歌&lt;/h1&gt;
-
-
+&lt;span id=&#39;continue&#39;&gt;&lt;/span&gt;&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="58" name="unlock" tags="center ch0 noheader no-side-bar" position="700,0" size="100,100">
+&lt;img src=&quot;media/img/logo.png&quot; width=&quot;80%&quot;&gt;
 
 (請輸入遊戲開通密碼)
 &lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
