--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -2959,7 +2959,8 @@ width: 60%;
 &lt;&lt;if $title5&gt;&gt;[[終章|結尾01]]&lt;&lt;/if&gt;&gt;
 */</tw-passagedata><tw-passagedata pid="17" name="人員名單" tags="" position="0,100" size="100,100">
 故事文本：郭哲均、陳力豪、陳志軒、曾慶珠
-田野調查：吳青穎、林柏源、徐煥喆、徐慧娟、張江洪、曾慶珠、蕭國楊、顏正鴻
+田野調查：吳青穎、林柏源、徐煥喆、徐慧娟、
+　　　　　張江洪、曾慶珠、蕭國楊、顏正鴻
 遊戲設計：林柏源、羅士哲
 遊戲程式：張雅婷
 遊戲立繪：秘密製造所
@@ -2967,7 +2968,8 @@ width: 60%;
 
 指導單位｜文化部、臺南市政府文化局
 主辦單位｜臺南市中西區公所
-合辦單位｜社團法人台南市社區大學研究發展學會、街密小組、三知餘文化</tw-passagedata><tw-passagedata pid="18" name="Widgets" tags="noreturn widget nobr" position="125,0" size="100,100">&lt;&lt;widget &quot;scicon&quot;&gt;&gt;&lt;span @class=&quot;&#39;sc-icon sc-&#39; + $args.raw&quot; alt=&quot;&#39; + $args.raw + &#39;&quot;&gt;&lt;/span&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="頁面樣式編輯CSS碼" tags="" position="425,400" size="100,100">/*定義顏色*/
+合辦單位｜社團法人台南市社區大學研究發展
+　　　　　學會、街密小組、三知餘文化</tw-passagedata><tw-passagedata pid="18" name="Widgets" tags="noreturn widget nobr" position="125,0" size="100,100">&lt;&lt;widget &quot;scicon&quot;&gt;&gt;&lt;span @class=&quot;&#39;sc-icon sc-&#39; + $args.raw&quot; alt=&quot;&#39; + $args.raw + &#39;&quot;&gt;&lt;/span&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="頁面樣式編輯CSS碼" tags="" position="425,400" size="100,100">/*定義顏色*/
 :root {
   /* (default) light mode */
   --bg: #fff;
