--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -4778,7 +4778,7 @@ media/img/烏龜.png
 
 &lt;&lt;crossfadecontainer &quot;testID&quot; &quot;media/img/結局圖.png&quot;&gt;&gt;&lt;&lt;timed 1s&gt;&gt;&lt;&lt;crossfade &quot;testID&quot; &quot;media/img/結局圖2.png&quot; 2s&gt;&gt;&lt;&lt;/timed&gt;&gt;
 
-&lt;&lt;timed 2.5s t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;【END】&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="102" name="遊戲教學" tags="center noheader ch0" position="700,100" size="100,100">&lt;div class =&quot;animate__bounceIn animate__infinite animate__slow&quot;&gt;&lt;span class=&quot;title&quot;&gt;遊戲教學&lt;/span&gt;&lt;/div&gt;&lt;&lt;script&gt;&gt;UIBar.stow()&lt;&lt;/script&gt;&gt;
+&lt;&lt;timed 2.5s t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;結束之前，別忘了享受[[當地美食|https://www.google.com/maps/d/u/0/embed?mid=1kWwYb3_KKCHs1HG5WtWTJ04tSSQAU0m7]]再回去喔～&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="102" name="遊戲教學" tags="center noheader ch0" position="700,100" size="100,100">&lt;div class =&quot;animate__bounceIn animate__infinite animate__slow&quot;&gt;&lt;span class=&quot;title&quot;&gt;遊戲教學&lt;/span&gt;&lt;/div&gt;&lt;&lt;script&gt;&gt;UIBar.stow()&lt;&lt;/script&gt;&gt;
 &lt;div class=&quot;lefttext&quot;&gt;
 #遊戲程式透過網頁瀏覽器來運作，建議使用@@color:green;chrome瀏覽器@@。
 #遊戲解謎過程會需要使用到@@color:green;剪刀@@裁切，建議在遊玩前先行準備。
