--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -4579,7 +4579,7 @@ media/img/烏龜.png
     &lt;&lt;/script&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="84" name="鎖聖獸關卡03解謎" tags="center ch2 noheader" position="1825,550" size="100,100">@@color:#4E7D96;&lt;h2&gt;解開鳥卦的暗號&lt;/h2&gt;@@
 
-&lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請從道具剪下3張牌卡，配合[[聆聽⾳樂|https://player.vimeo.com/video/249625865?h=c65c5c7c26]]，排出牌卡的正確順序。即可從⿃卦的暗號中，推算出下個地點。@@&lt;/div&gt;&lt;/div&gt;
+&lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請從道具剪下3張牌卡，配合[[聆聽⾳樂|https://youtu.be/UFygF1Z6ZXo]]，排出牌卡的正確順序。即可從⿃卦的暗號中，推算出下個地點。@@&lt;/div&gt;&lt;/div&gt;
 
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
 請輸入下一個地點：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
@@ -4607,7 +4607,7 @@ media/img/烏龜.png
     &lt;&lt;/script&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="遺忘之歌關卡01解謎" tags="center ch4 noheader" position="2625,300" size="100,100">@@color:#4E7D96;&lt;h2&gt;從普濟殿裡蒐集兇手的線索，並推理出兇手是誰？&lt;/h2&gt;@@
 
-&lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請從道具剪下迷宮圖紙，從打星星處出發沿著黑線走，設法取回三種不同的法寶。圖紙上的兩條虛線，是可以摺的哦。試著摺摺看再走吧。
+&lt;div class=&quot;lefttext&quot;&gt;&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請從道具剪下迷宮圖紙，從打星星處出發沿著黑線走並不可回頭，設法取回三種不同的法寶。圖紙上的兩條虛線，是可以摺的哦。試著摺摺看再走吧。
 
 請注意，若走到其中⼀個⾨，則視為抵達終點。能順利取得三個寶物的路線，抵達的終點，便是聲⾳的⽅向。請將迷宮圖紙對照普濟殿平面圖（如下），找出抵達終點的實際位置並走⾄該處的門，輸入⾨上⽅所寫的兩個字。@@&lt;/div&gt;&lt;/div&gt;
 
