--- a/test/index.html
+++ b/test/index.html
@@ -923,7 +923,7 @@ $(document).on(':passageend', function () { hashChanged(); });
     allowfullscreen=&quot;&quot;
     loading=&quot;lazy&quot;
   &gt;&lt;/iframe&gt;
-&lt;/div&gt;&lt;&lt;run Engine.restart()&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="HTML發布說明" tags="" position="500,700" size="200,100">1.加入favicon：在&lt;head&gt; &lt;/head&gt;之間增加下面語法
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="HTML發布說明" tags="" position="500,700" size="200,100">1.加入favicon：在&lt;head&gt; &lt;/head&gt;之間增加下面語法
 &lt;link rel=&quot;shortcut icon&quot; type=&quot;image/png&quot; href=&quot;media/img/favicon.png&quot;&gt;
 
 2.側邊欄不要出現檔名
