--- a/test/index.html
+++ b/test/index.html
@@ -948,10 +948,10 @@ $(document).on(':passageend', function () { hashChanged(); });
 &lt;/div&gt;--&gt;
 &lt;div style=&quot;background-color:white;&quot;&gt;
 &lt;strong&gt;【聆聽客語導覽】&lt;/strong&gt;
-&lt;table&gt;
-&lt;td&gt;&lt;&lt;link &quot;播放&quot;&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; play&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
-&lt;td&gt;&lt;&lt;link &quot;暫停&quot;&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; pause&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
-&lt;td&gt;&lt;&lt;link &quot;停止&quot;&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; stop&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
+&lt;table style=&quot;width:100%;&quot;&gt;
+&lt;td&gt;&lt;&lt;link [img[media/img/play.png]]&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; play&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
+&lt;td&gt;&lt;&lt;link [img[media/img/pause.png]]&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; pause&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
+&lt;td&gt;&lt;&lt;link [img[media/img/stop.png]]&gt;&gt;&lt;&lt;playlist &quot;臺南市客家文化會館&quot; stop&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/td&gt;
 &lt;/table&gt;
 &lt;/div&gt;
 
