--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,15 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 -->
+<script type="text/javascript">
+var sc_project=12821814; 
+var sc_invisible=0; 
+var sc_security="ed7d5503"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
 <script id="script-libraries" type="text/javascript">
 if(document.head&&document.addEventListener&&document.querySelector&&Object.create&&Object.freeze&&JSON){document.documentElement.setAttribute("data-init", "loading");
 /*! @source http://purl.eligrey.com/github/classList.js/blob/1.2.20171210/classList.js */
@@ -932,7 +941,16 @@ $(document).on(':passageend', function () { hashChanged(); });
 	&lt;&lt;/script&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryBanner" tags="noreturn" position="500,75" size="100,100">&lt;img src=&quot;media/img/bannerlogo.png&quot; width=&quot;100%&quot; &gt;</tw-passagedata><tw-passagedata pid="3" name="StoryDisplayTitle" tags="noreturn" position="500,175" size="100,100"></tw-passagedata><tw-passagedata pid="4" name="StorySubtitle" tags="noreturn" position="500,275" size="100,100">瀏覽人次
 &lt;img src=&quot;https://hitwebcounter.com/counter/counter.php?page=8068107&amp;style=0008&amp;nbdigits=8&amp;type=page&amp;initCount=0&quot; title=&quot;Free Counter&quot; Alt=&quot;&quot;   border=&quot;0&quot; /&gt;
-----</tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="500,375" size="100,100">&lt;img src=&quot;media/img/單位.png&quot; width=&quot;100%&quot; &gt;</tw-passagedata><tw-passagedata pid="6" name="阿亮牯與阿琴妹" tags="center" position="775,175" size="100,100">&lt;img src=&quot;media/img/block.png&quot; width=&quot;100%&quot; &gt;
+----
+<!-- Default Statcounter code for
+阿亮牯與阿琴妹計數器 https://3zhiyu.github.io/ -->
+<div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12821814/0/ed7d5503/0/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div>
+<!-- End of Statcounter Code --></tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="500,375" size="100,100">&lt;img src=&quot;media/img/單位.png&quot; width=&quot;100%&quot; &gt;</tw-passagedata><tw-passagedata pid="6" name="阿亮牯與阿琴妹" tags="center" position="775,175" size="100,100">&lt;img src=&quot;media/img/block.png&quot; width=&quot;100%&quot; &gt;
 &lt;img src=&quot;media/img/title.png&quot; width=&quot;100%&quot; &gt;
 
 &lt;div class=&quot;lefttext&quot;&gt;\
