--- a/chatgpt/ChatgptNPCgame.html
+++ b/chatgpt/ChatgptNPCgame.html
@@ -391,7 +391,7 @@ window.chatgpt = function () {
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryInit" tags="" position="150,175" size="100,100">&lt;&lt;set $player to &quot;玩家&quot;&gt;&gt;
 &lt;&lt;set $ainpc to &quot;NPC&quot;&gt;&gt;
 &lt;&lt;set $clue to []&gt;&gt;
-&lt;&lt;set $apikey to &quot;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&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="遊戲開場" tags="" position="600,100" size="100,100">你有一個非常要好的朋友，是資深的火車迷。他的休閒時間總是排滿出國前往某個城市「追火車」的行程，只為了親眼目睹火車風采的那一刻。
+&lt;&lt;set $apikey to &quot;&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="遊戲開場" tags="" position="600,100" size="100,100">你有一個非常要好的朋友，是資深的火車迷。他的休閒時間總是排滿出國前往某個城市「追火車」的行程，只為了親眼目睹火車風采的那一刻。
 
 這天，你收到朋友要來找你的訊息，當然他的主要目的不是看你好不好，而是來追火車的。朋友他不知從哪得知，有個「神祕列車」即將經過你居住的城市，朋友他急著動身前來，根本沒時間自己調查經過的時間與路線，只好拜託你幫忙了！
 
