--- a/chatgpt/ChatgptNPCgame.html
+++ b/chatgpt/ChatgptNPCgame.html
@@ -408,7 +408,7 @@ window.chatgpt = function () {
 &lt;&lt;/nobr&gt;&gt;&lt;div id=&quot;app&quot;&gt;
     &lt;div class=&quot;title&quot;&gt;$ainpc&lt;/div&gt;
 [[去找鐵道博物館志工|鐵道博物館志工]]
-[[告訴朋友調查結果|朋友]]
+[[告訴朋友調查結果|朋友]]@@（注意：一旦進入就不能再調查並進入結局）@@
     &lt;textarea id=&quot;res&quot; placeholder=&quot;你好&quot;&gt;&lt;/textarea&gt;
         
     &lt;div class=&quot;promptText&quot;&gt;請輸入對話：&lt;/div&gt;
@@ -424,7 +424,7 @@ window.chatgpt = function () {
 &lt;&lt;/nobr&gt;&gt;&lt;div id=&quot;app&quot;&gt;
     &lt;div class=&quot;title&quot;&gt;$ainpc&lt;/div&gt;
 [[去找火車運輸專家|火車運輸專家]]
-[[告訴朋友調查結果|朋友]]
+[[告訴朋友調查結果|朋友]]@@（注意：一旦進入就不能再調查並進入結局）@@
     &lt;textarea id=&quot;res&quot; placeholder=&quot;你好&quot;&gt;&lt;/textarea&gt;
         
     &lt;div class=&quot;promptText&quot;&gt;請輸入對話：&lt;/div&gt;
