--- a/tainanfist/testdemo_2.html
+++ b/tainanfist/testdemo_2.html
@@ -5855,7 +5855,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="85" name="第五章1" tags="autos
 &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="128" name="第四章關卡1-19" tags="autosave center" position="3700,1150" size="100,100">&lt;h1&gt;【關卡】找出陳天南的真相&lt;/h1&gt;
 
-你發現籤詩寫著：
+靈籤第四十二首籤詩寫著：
 @@color:crimson;&lt;em&gt;靈籤告爾爾當知　莫把心腸盡靠伊
 他是蛇心並虎口　要將骨肉去充饑&lt;/em&gt;@@
 
