--- a/tainanfist/testdemo_2.html
+++ b/tainanfist/testdemo_2.html
@@ -4601,7 +4601,7 @@ _contents
 找齊總共五個典故，才能解開鎖頭。
 
 &lt;&lt;linkreplace &#39;開始解鎖&#39;&gt;&gt;
-（提示：紅字中已經有一個完整的典故囉！）
+（提示：紅色十字中已經有一個典故囉！）
 &lt;table class =&#39;clickedtable&#39; border=&quot;1&quot; style=&quot;width:100%;max-width: 300px;margin: 0 auto;&quot;&gt;
     &lt;tr&gt;
         &lt;td&gt;&lt;span id=&quot;word1&quot; class=&quot;clickable-word&quot;&gt;的&lt;/span&gt;&lt;/td&gt;
