--- a/tainanfist/testdemo_2.html
+++ b/tainanfist/testdemo_2.html
@@ -4343,7 +4343,7 @@ _contents
 &lt;h1&gt;【序章】天地無門&lt;/h1&gt;
 
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;序章1內文&#39;&gt;&gt;&lt;/div&gt;
-&lt;span id=&#39;storylink&#39;&gt;&lt;&lt;button &#39;繼續&#39;&gt;&gt;&lt;&lt;set $story to $story + 1&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;序章1內文&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="35" name="序章關卡" tags="center autosave" position="1000,500" size="100,100">&lt;h1&gt;【關卡】找出試煉的場所&lt;/h1&gt;
+&lt;span id=&#39;storylink&#39;&gt;&lt;&lt;button &#39;繼續&#39;&gt;&gt;&lt;&lt;set $story to $story + 1&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;序章1內文&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="35" name="序章關卡" tags="center autosave" position="1000,500" size="100,100">&lt;h1&gt;【關卡】找出試煉的場所&lt;/h1&gt;
 
 根據師姐千歲所算結果，試煉的場所與「王、寧、府、靖」四個字有關。
 請依照這四個字，對照@@color:green;遊戲摺頁的地圖@@，找到試煉場所！
